# GHRR-with-Attention

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt  start.cmd  start.sh
experiments/: .gitignore  __main__.py  experiments.py  records.py
experiments/exp_1/: .gitignore  __init__.py
experiments/exp_encode_hvs/: __init__.py
experiments/exp_register_labels/: __init__.py
experiments/exp_train_test/: __init__.py
experiments/mutag_utils/: __init__.py
ghrr/: hv_functions.py
src/: __main__.py  constants.py  distribute_rows.py  encode_graphs.py  fn_context.py  fs_organization.py  get_args.py  graph_pruning.py  hv_functions.py  hv_memory.py  hv_proxy.py  localTypes.py  memory.py  mmap_tensors.py  model.py  mutag.py  operation.py  operation_manager.py  parse_args.py  positional_encoding.py  prev_setup.py  process_results.py  shape_divider.py  tensor_functions.py  tensor_proxy.py  test_model.py  tests.py  time_.py  time_start.py  tudataset.py  utils.py
src/f2/: __init__.py
src/f3/: __init__.py
src/f4/: __init__.py  model.py
src/ghrr_with_attention/: __init__.py  __main__.py  device.py  hv_functions.py  hv_memory.py  mutag.py  utils.py
src/gpu_management/: __init__.py  data_type.py  memory.py  tensor_functions.py  tensor_proxy.py  tests.py
src/gpu_mem_management/: data_type.py  memory.py  tensor_functions.py  tensor_proxy.py  tests.py
src/utils/: __init__.py
test/outputs/: a1.json  mm1.json  mm2.json  mm3.json  softmax1.json  summation.json  (+2 more)
test_outputs/: .gitignore  t1.pt  t2.pt  t3.pt
tests/: __main__.py  utils.py
(+7 files in other folders)
