# This is to make the main library accessible for unit-testing and the experiments.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghrr_with_attention"
version = "0.1.0"
dependencies = ["torch"]

[project.optional-dependencies]
dev = ["mypy"]

[tool.setuptools.packages.find]
where = ["src"]
